[V4] Fix: Div block/Flex box 'Overflow-hidden' hides the widget handles [ED-18934]

--- a/assets/dev/scss/editor/preview/_section.scss
+++ b/assets/dev/scss/editor/preview/_section.scss
@@ -17,6 +17,11 @@
 	border-end-start-radius: 0;
 	border-end-end-radius: 0;
 
+	&.elementor-editor-element-settings-overlay {
+		transform: translateX( -50% ) rotate(180deg);
+		flex-direction: row-reverse;
+	}
+
 	i.eicon-handle {
 		font-size: 16px;
 	}
